Add deleteEmail
